--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,11 +7,8 @@
 @import "common/background-image";
 @import "common/loading";
 @import "common/place-holder";
-@import "common/header";
+@import "common/footer";
 @import "../base/webuploader-0.1.5/webuploader";
 
 /* account */
 @import "account/index";
-@import "account/login";
-@import "account/register";
-@import "account/money";
