--- a/app/styles/account/_index.scss
+++ b/app/styles/account/_index.scss
@@ -1,122 +1,103 @@
 .wd-index {
-    margin: 0px auto;
     .up-part {
-        @include wd-image('index-bg.jpg');
-        background-size: cover;
+        @include wd-image("index-bg.jpg");
+        height: 500px;
         width: 100%;
-        height: 640px;
-        position: relative;
+        min-width: $min-page-width;
         .header {
+            height: 40px;
+            line-height: 40px;
+            padding-top: 30px;
             .logo {
-                @include wd-image('logo-white.png');
+                @include wd-image("logo.png");
+                display: inline-block;
                 float: left;
-                margin-left: 40px;
-                cursor: pointer;
+                margin-left: 30px;
             }
-            .toolbar {
+            .nav {
+                display: inline-block;
                 float: right;
-                .phone-num {
-                    color: $standard-blue-green;
-                }
-                .word {
-                    color: #fff;
-                    border-left: 1px solid $standard-white;
-                    height: 30px;
-                    line-height: 30px;
-                    margin-left: 15px;
-                    padding-left: 15px;
-                    cursor: pointer;
+                margin-right: 30px;
+                a {
+                    color: $standard-white;
+                    margin: 0px 5px;
                 }
                 .login-btn {
+                    background-color: transparent;
+                    border: 1px solid $standard-white;
                     width: 50px;
-                    border-radius: 30px;
-                    background-color: $standard-blue;
-                    margin-right: 40px;
-                    margin-left: 30px;
+                    margin-left: 20px;
                 }
             }
         }
-        .open-form {
-            text-align: center;
-            position: absolute;
-            width: 100%;
-            top: 50%;
-            margin-top: -210px;
-            h1 {
-                color: $standard-white;
-                font-size: 44px;
-                font-weight: 300;
-            }
-            h2 {
-                color: $standard-gray;
-                font-size: 22px;
-            }
-            .form {
-                margin: 15px auto 0px auto;
-                padding: 40px 0px 25px 0px;
-                width: 408px;
-                border-radius: 5px;
+        .slogan {
+            margin: 90px auto 0px auto;
+            color: $standard-white;
+            width: 78%;
+            .title {
                 text-align: center;
-                background-color: $standard-black;
-                .tip {
-                    font-size: 15px;
-                    color: $standard-gray;
-                    margin-top: 10px;
-                    a {
-                        text-decoration: underline;
-                        font-size: 15px;
-                        color: $standard-gray;
-                    }
-                }
-                input {
-                    text-align: center;
-                    margin-bottom: 16px;
-                    width: 320px;
-                    height: 40px;
-                    line-height: 40px;
-                    font-size: 32px;
-                    /*letter-spacing: 5px;*/
-                }
-                .btn {
-                    margin-top: 3px;
-                    width: 312px;
-                    height: 34px;
-                    line-height: 34px;
-                    font-size: 22px;
-                }
-                p.error {
-                    font-size: 20px;
-                    display: block;
-                }
+                font-size: 50px;
+                margin-bottom: 30px;
+            }
+            .content {
+                font-size: 16px;
             }
         }
     }
     .down-part {
-        padding-top: 50px;
-        height: 640px;
-        .item {
-            text-align: center;
-            h1 {
-                font-size: 30px;
-            }
-            h2 {
-                font-size: 16px;
-                margin-top: 8px;
-                margin-bottom: 30px;
-            }
-            .image {
-                @include wd-image('mac.png');
+        position: relative;
+        background-color: $standard-gray;
+        min-height: 640px;
+        min-width: $min-page-width;
+        bottom: 0px;
+        .wrapper {
+            position: absolute;
+            top: -100px;
+            left: 11%;
+            background-color: $standard-white;
+            width: 78%;
+            height: 610px;
+            padding-top: 30px;
+            .words {
                 text-align: center;
-                margin: 0px auto;
+                margin-bottom: 20px;
+                .title {
+                    font-size: 20px;
+                }
+                .content {
+                    font-size: 15px;
+                }
+            }
+            .register-form {
+                margin: 0px 15px 30px 15px;
+                text-align: center;
+                border-bottom: 1px solid #ccc;
+                padding-bottom: 30px;
+                input {
+                    width: 300px;
+                    height: 30px;
+                    line-height: 30px;
+                    font-size: 20px;
+                }
+                .btn {
+                    height: 32px;
+                    line-height: 32px;
+                    font-size: 18px;
+                    width: 82px;
+                }
+            }
+            .statement {
+                padding: 0px 30px;
+                .title {
+                    text-align: center;
+                    font-size: 20px;
+                    margin-bottom: 30px;
+                }
+                p {
+                    font-size: 13px;
+                    margin-bottom: 10px;
+                }
             }
         }
-    }
-    .loading {
-        background-color: $standard-white;
-        position: fixed;
-        top: 0px;
-        left: 0px;
-        right: 0px;
-        bottom: 0px;
     }
 }
