--- a/app/views/account/index.html
+++ b/app/views/account/index.html
@@ -1,35 +1,46 @@
 <div class="wd-index" ng-keyDown="keyDown($event)">
-    <div class="up-part" wd-width-equal-height>
-        <div class="header wd-header">
-            <a href="#/" class="logo"></a>
-            <div class="toolbar">
-                <p class="phone-num">400-809-8509</p>
-                <a class="word">优势</a>
-                <a class="word">跟单</a>
-                <a class="word">帮助</a>
-                <a href="#/login" class="btn login-btn">登录</a>
+    <div class="up-part">
+        <div class="header">
+            <div class="logo"></div>
+            <div class="nav">
+                <a href="">服务与收费</a>
+                <a href="">下载</a>
+                <a href="">联系客服</a>
+                <a href="">关于我们</a>
+                <div class="btn login-btn">登录</div>
             </div>
         </div>
-        <div class="open-form">
-            <h1>投资外汇，从未如此轻松</h1>
-            <h2>开户即可获得 500 美元体验金</h2>
-            <div class="form">
-                <input autofocus ng-class="{error: signIn.uiPhoneError}" type="text" wd-place-holder placeholder="您的手机号码" ng-model="signIn.phone">
-                <input ng-class="{error: signIn.uiPasswordError}" type="text" wd-place-holder placeholder="设置登录密码" ng-model="signIn.password">
-                <p class="error">{{signIn.uiPhoneError || signIn.uiPasswordError}}</p>
-                <div class="btn" ng-click="goToRegister();">开通账户</div>
-                <p class="tip">开通账户代表您了解并知悉外汇 <a href="">交易风险</a></p> 
-            </div>
+        <div class="slogan">
+            <p class="title">投资美股不再是难事</p>
+            <p class="content">我们提供了高效简单好用的工具为您更快更好的交易我们提供了高效简单好用的工具为您更快更好的交易我们提供了高效简单好用的工具为您更快更好的交易</p>
         </div>
     </div>
     <div class="down-part">
-        <div class="item">
-            <h1>简单，不只是简单</h1>
-            <h2>无论是 iPhone 还是 PC 统统都支持</h2>
-            <div class="image"></div>
+        <div class="wrapper">
+            <div class="words">
+                <p class="title">一起来吧，加入我们一起改变</p>
+                <p class="content">注册成为内测用户可以享受什么什么什么什么什么什么什么什</p>
+            </div>
+            <div class="register-form">
+                <div>
+                    <input class="mobile" type="text" wd-placeholder="请输入您的手机号" ng-model="mobile"><div class="btn">验证手机</div>
+                </div>
+                <div class="hide">
+                    <input class="code" type="text" wd-placeholder="手机验证码" ng-model="code">
+                    <br>
+                    <input class="password" type="text" wd-placeholder="设置密码" ng-model="password">
+                    <br>
+                    <div class="btn">重新验证</div>
+                    <div class="btn register-btn">立即开户</div>
+                </div>
+            </div>
+            <div class="statement">
+                <p class="title">创造的初衷</p>
+                <p>我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。</p>
+                <p>我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。</p>
+                <p>我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。</p>
+            </div>
         </div>
     </div>
-    <div class="loading" ng-if="loading">
-        <div wd-loading></div>
-    </div>
 </div>
+<div wd-footer></div>
