--- a/app/styles/common/_base.scss
+++ b/app/styles/common/_base.scss
@@ -7,7 +7,9 @@ $standard-green: #22c064;
 $standard-gray: #eee;
 $standard-deep-gray: #aaa;
 $standard-red: #ed7161;
-$standard-orange: #faaf46;
+$standard-orange: #f6e2bf;
+$standard-deep-orange: #faaf46;
+
 
 $min-page-width: 960px; 
 
@@ -35,6 +37,7 @@ a {
     font-size: 15px;
     line-height: 20px;
     text-decoration: none;
+    color: $standard-blue;
     &:hover {
         text-decoration: underline;
     }
@@ -53,6 +56,7 @@ input[type=text], input[type=password] {
     border: 1px solid $standard-deep-gray;
     font-size: 15px;
     color: $standard-black;
+    vertical-align: baseline;
     &.error {
         @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075),0 0 6px #ce8483);
         border: 2px solid $standard-red;
@@ -67,8 +71,17 @@ input[type=file].error {
     color: $standard-red;
 }
 
+input[type=radio], input[type=checkbox] {
+    cursor: pointer;
+    vertical-align: text-top;
+}
+
 ul {
     list-style-type: none;
+}
+
+select {
+    font-size: 20px;
 }
 
 .btn {
@@ -92,7 +105,7 @@ ul {
 }
 
 .strong {
-    color: $standard-orange;
+    color: $standard-red;
 }
 
 .error {
