--- a/app/views/account/index.html
+++ b/app/views/account/index.html
@@ -1,45 +1,56 @@
+<div wd-header></div>
 <div class="wd-index" ng-keyDown="keyDown($event)">
-    <div class="up-part">
-        <div class="header">
-            <div class="logo"></div>
-            <div class="nav">
-                <a href="">服务与收费</a>
-                <a href="">下载</a>
-                <a href="">联系客服</a>
-                <a href="">关于我们</a>
-                <div class="btn login-btn">登录</div>
-            </div>
+    <div class="banner"></div>
+    <div class="tips">
+        <div class="block">
+            <p class="title">老虎证券</p>
+            <p>中国最大的提供美股、港股投资服务的互联网券商。</p>
         </div>
-        <div class="slogan">
-            <p class="title">投资美股不再是难事</p>
-            <p class="content">我们提供了高效简单好用的工具为您更快更好的交易我们提供了高效简单好用的工具为您更快更好的交易我们提供了高效简单好用的工具为您更快更好的交易</p>
+        <div class="block">
+            <div class="btn">免费开户</div>
+        </div>
+        <div class="block">
+            <p>加入老虎证券的用户</p>
+            <p class="num">123123</p>
+        </div>
+        <div class="block">
+            <p>已发生的交易金额</p>
+            <p class="num">$12312312312</p>
         </div>
     </div>
-    <div class="down-part">
-        <div class="wrapper">
-            <div class="words">
-                <p class="title">一起来吧，加入我们一起改变</p>
-                <p class="content">注册成为内测用户可以享受什么什么什么什么什么什么什么什</p>
-            </div>
-            <div class="register-form">
-                <div>
-                    <input class="mobile" type="text" wd-placeholder="请输入您的手机号" ng-model="mobile"><div class="btn">验证手机</div>
-                </div>
-                <div class="hide">
-                    <input class="code" type="text" wd-placeholder="手机验证码" ng-model="code">
-                    <br>
-                    <input class="password" type="text" wd-placeholder="设置密码" ng-model="password">
-                    <br>
-                    <div class="btn">重新验证</div>
-                    <div class="btn register-btn">立即开户</div>
-                </div>
-            </div>
-            <div class="statement">
-                <p class="title">创造的初衷</p>
-                <p>我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。</p>
-                <p>我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。</p>
-                <p>我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。我勒个去，我勒个去，我勒个去去。</p>
-            </div>
+    <div class="h2-title">
+        <p><span class="flag"></span>热门个股</p>
+    </div>
+    <div class="hot-stock">
+        <div class="block">
+            <div class="stock-logo apple"></div>
+        </div>
+        <div class="block">
+            <div class="stock-logo byd"></div>
+        </div>
+        <div class="block">
+            <div class="stock-logo jinshan"></div>
+        </div>
+        <div class="block">
+            <div class="stock-logo yidong"></div>
+        </div>
+    </div>
+    <div class="intro-info">
+        <div class="block">
+            <div class="icon icon-safe"></div>
+            <p>香港证监会认可的持牌法团</p>
+        </div>
+        <div class="block">
+            <div class="icon icon-quality"></div>
+            <p>覆盖各大平台，随时随地交易</p>
+        </div>
+        <div class="block">
+            <div class="icon icon-cheap"></div>
+            <p>无账户管理费，多种免佣金优惠</p>
+        </div>
+        <div class="block">
+            <div class="icon icon-local"></div>
+            <p>24X7 小时，本地化服务</p>
         </div>
     </div>
 </div>
