--- a/app/views/common/footer.html
+++ b/app/views/common/footer.html
@@ -1,11 +1,40 @@
 <div class="wd-footer">
-    <div class="nav">
-        <a href="">监管机构</a>
-        <a href="">服务条款</a>
-        <a href="">隐私协议</a>
-        <a href="">版权声明</a>
+    <div class="left">
+        <div class="block">
+            <p class="title">老虎证券</p>
+            <a>服务与收费</a>
+            <a>交易工具</a>
+            <a>联系我们</a>
+            <a>免费开户</a>
+        </div>
+        <div class="block">
+            <p class="title">我的谷歌</p>
+            <a>网上交易</a>
+            <a>账户统计</a>
+            <a>存入资金</a>
+            <a>转入股票</a>
+        </div>
+        <div class="block">
+            <p class="title">条款声明</p>
+            <a>隐私声明</a>
+            <a>服务条款</a>
+            <a>常用链接</a>
+            <a>网站地图</a>
+        </div>
+        <div class="block">
+            <p class="title">关注我们</p>
+            <a>新浪微博</a>
+            <a>微信服务号</a>
+        </div>
     </div>
-    <div class="service">
-        <p>客服电话：400-123-1234</p>
+    <div class="right">
+        <p class="title">400-123-1234</p>
+        <p>24 小时客服</p>
+    </div>
+    <div class="bottom-tips">
+        <p>
+            <span>老虎证券为香港证监会认可的持牌法团（<a href="">中央编号：AZT137</a>），提供证券交易服务并受其监管。</span>
+            <span>&copy;2014 富途证券国际(香港)有限公司 版权所有. <a href="">粤ICP备08108712号-2</a></span>
+        </p>
     </div>
 </div>
