--- a/app/styles/account/_index.scss
+++ b/app/styles/account/_index.scss
@@ -1,103 +1,104 @@
 .wd-index {
-    .up-part {
-        @include wd-image("index-bg.jpg");
-        height: 500px;
-        width: 100%;
-        min-width: $min-page-width;
-        .header {
-            height: 40px;
-            line-height: 40px;
-            padding-top: 30px;
-            .logo {
-                @include wd-image("logo.png");
-                display: inline-block;
-                float: left;
-                margin-left: 30px;
-            }
-            .nav {
-                display: inline-block;
-                float: right;
-                margin-right: 30px;
-                a {
-                    color: $standard-white;
-                    margin: 0px 5px;
-                }
-                .login-btn {
-                    background-color: transparent;
-                    border: 1px solid $standard-white;
-                    width: 50px;
-                    margin-left: 20px;
-                }
-            }
+    min-width: 960px;
+    width: $page-width;
+    margin: 0px auto;
+    .banner {
+        height: 300px;
+        background-color: $standard-gray;
+        margin: 30px 0px;
+    }
+    .h2-title {
+        margin-bottom: 10px;
+        p {
+            font-size: 18px;
         }
-        .slogan {
-            margin: 90px auto 0px auto;
-            color: $standard-white;
-            width: 64%;
+        .flag {
+            display: inline-block;
+            width: 3px;
+            height: 12px;
+            margin-right: 10px;
+            background-color: $standard-blue;
+        }
+    }
+    .tips {
+        text-align: center;
+        margin-bottom: 30px;
+        height: 100px;
+        border: 1px solid $standard-gray;
+        .block {
+            display: inline-block;
+            padding-top: 20px;
+            margin: 0px 30px;
             .title {
-                text-align: center;
-                font-size: 50px;
-                margin-bottom: 30px;
+                font-size: 20px;
             }
-            .content {
-                font-size: 16px;
+            .btn {
+                margin-top: -15px;
+            }
+            .num {
+                color: $standard-blue;
+                font-size: 18px;
             }
         }
     }
-    .down-part {
-        position: relative;
-        background-color: $standard-gray;
-        min-height: 640px;
-        min-width: $min-page-width;
-        bottom: 0px;
-        .wrapper {
-            position: absolute;
-            top: -100px;
-            left: 21%;
-            background-color: $standard-white;
-            width: 58%;
-            height: 610px;
-            padding-top: 30px;
-            .words {
-                text-align: center;
-                margin-bottom: 20px;
-                .title {
-                    font-size: 20px;
-                }
-                .content {
-                    font-size: 15px;
-                }
+    .hot-stock {
+        height: 300px;
+        margin-bottom: 30px;
+        .block {
+            display: inline-block;
+            width: 24%;
+            height: 100%;
+            text-align: center;
+            border: 1px solid $standard-gray;
+            .stock-logo {
+                margin: 0px auto;
             }
-            .register-form {
-                margin: 0px 15px 50px 15px;
-                text-align: center;
-                border-bottom: 1px solid #ccc;
-                padding-bottom: 60px;
-                input {
-                    width: 300px;
-                    height: 30px;
-                    line-height: 30px;
-                    font-size: 20px;
-                }
-                .btn {
-                    height: 32px;
-                    line-height: 32px;
-                    font-size: 18px;
-                    width: 82px;
-                }
+            .apple {
+                @include wd-image('apple.jpg');
             }
-            .statement {
-                padding: 0px 30px;
-                .title {
-                    text-align: center;
-                    font-size: 20px;
-                    margin-bottom: 30px;
-                }
-                p {
-                    font-size: 13px;
-                    margin-bottom: 10px;
-                }
+            .byd {
+                @include wd-image('byd.jpg');
             }
+            .jinshan {
+                @include wd-image('jinshan.jpg');
+            }
+            .yidong {
+                @include wd-image('yidong.jpg');
+            }
+        }
+    }
+    .intro-info {
+        height: 100px;
+        margin-bottom: 50px;
+        .block {
+            cursor: pointer;
+            display: inline-block;
+            width: 24%;
+            text-align: center;
+            @include opacity(0.6);
+            .icon {
+                display: inline-block;
+            }
+            @include transition(opacity, 0.8s);
+            &:hover {
+                @include opacity(1);
+            }
+            p {
+                line-height: 0px;
+                color: $standard-deep-gray;
+            }
+        }
+        .icon-safe {
+            @include wd-image('icon-safe.png');
+        }
+        .icon-quality {
+            @include wd-image('icon-quality.png');
+        }
+        .icon-cheap {
+            @include wd-image('icon-cheap.png');
+        }
+        .icon-local {
+            @include wd-image('icon-local.png');
         }
     }
 }
