--- a/app/views/common/header.html
+++ b/app/views/common/header.html
@@ -1,10 +1,31 @@
 <div class="wd-header">
-    <div class="logo"></div>
+    <div class="top-tips">
+        <p class="left">
+            <span>客服热线：400-123-1234</span>
+            <a>关注微信</a>
+            <a>帮助中心</a>
+        </p>
+        <p class="right">
+            <a class="login-btn">用户登陆</a>
+            <a>注册</a>
+            <a>在线咨询</a>
+            <span class="btn open-btn">免费开户</span>
+        </p>
+    </div>
+    <div class="body">
+        <div class="logo"></div>
+    </div>
     <div class="nav">
-        <a href="">服务与收费</a>
-        <a href="">软件下载</a>
-        <a href="">联系客服</a>
-        <a href="">关于我们</a>
-        <div class="btn login-btn">登录</div>
+        <div class="left">
+            <div class="btn">首页</div>
+            <div class="btn">行情</div>
+            <div class="btn">下载</div>
+            <div class="btn">社区</div>
+            <div class="btn">关于</div>
+        </div>
+        <div class="right">
+            <div class="btn buy-btn">买卖股票</div>
+            <div class="btn my-btn">我的谷歌</div>
+        </div>
     </div>
 </div>
