[feature] 页面样式修改。

--- a/app/styles/common/_background-image.scss
+++ b/app/styles/common/_background-image.scss
@@ -1,4 +1,5 @@
 @mixin wd-image($name) {
+    display: inline-block;
     background: url('../images/' + $name) no-repeat 50% 50%;
     width: image-width($name);
     height: image-height($name);
