--- a/app/views/common/header.html
+++ b/app/views/common/header.html
@@ -1,31 +1,33 @@
 <div class="wd-header">
-    <div class="top-tips">
-        <p class="left">
-            <span>客服热线：400-123-1234</span>
-            <a>关注微信</a>
-            <a>帮助中心</a>
-        </p>
-        <p class="right">
-            <a class="login-btn">用户登陆</a>
-            <a>注册</a>
-            <a>在线咨询</a>
-            <span class="btn open-btn">免费开户</span>
-        </p>
-    </div>
-    <div class="body">
-        <div class="logo"></div>
+    <div class="wd-wrapper">
+        <div class="top-tips">
+            <p class="left">
+                <span>客服热线：400-123-1234</span>
+                <a>关注微信</a>
+                <a>帮助中心</a>
+            </p>
+            <p class="right">
+                <a href="#/account-login" class="login-btn">用户登陆</a>
+                <a href="#/account-register">注册</a>
+                <a>在线咨询</a>
+                <a href="#/account-login" class="btn open-btn">免费开户&nbsp;&gt;</a>
+            </p>
+        </div>
+        <div class="body">
+            <a class="logo" href="#/index"></a>
+        </div>
     </div>
     <div class="nav">
-        <div class="left">
-            <div class="btn">首页</div>
-            <div class="btn">行情</div>
-            <div class="btn">下载</div>
-            <div class="btn">社区</div>
-            <div class="btn">关于</div>
-        </div>
-        <div class="right">
-            <div class="btn buy-btn">买卖股票</div>
-            <div class="btn my-btn">我的谷歌</div>
+        <div class="wd-wrapper">
+            <div class="left nav-btns">
+                <a href="#/index" class="btn">首页</a>
+                <a href="#/download" class="btn">下载</a>
+                <div class="btn">关于</div>
+            </div>
+            <div class="right">
+                <!-- <div class="btn buy-btn">买卖股票</div> -->
+                <div class="btn my-btn">我的账户</div>
+            </div>
         </div>
     </div>
 </div>
