--- a/app/styles/account/_register.scss
+++ b/app/styles/account/_register.scss
@@ -1,89 +1,62 @@
-.wd-register-box {
-    background-color: $standard-gray;
-    width: 100%;
-    height: 100%;
-    min-width: $min-page-width;
-    position: absolute;
-    top: 89px;
-    padding-top: 60px;
-    .header {
-        width: 70%;
-        margin: 0px auto 20px auto;
-        .title {
-            font-size: 30px;
-        }
-        .des {
-            font-size: 13px;
-            margin-left: 15px;
-        }
+.wd-account-register {
+    position: relative;
+    .h2-title {
+        margin: 0px 50px;
+        padding: 0px 0px 13px 10px; 
+        border-bottom: 1px solid $standard-gray;
     }
-    .body {
-        width: 70%;
-        margin: 0px auto;
-        padding: 40px 0px;
-        background-color: $standard-white;
-        border: 1px solid $standard-deep-gray;
-        .body-content {
-            margin: 0px auto;
-            width: 600px;
-        }
-        .btns {
-            margin-top: 30px;
-            margin-left: 106px;
-            .btn {
-                width: 80px;
-            }
-            .prev-btn {
-                display: inline-block;
-                margin-top: 8px;
-                margin-left: 10px;
+    .form {
+        input[type=text] {
+            width: 200px;
+            &.auth-code-input {
+                width: 104px;
             }
         }
-    }
-}
-.wd-register {
-    min-height: 920px;
-    .body {
+        margin-top: 30px;
+        margin-left: 18%;
         .item {
-            height: 36px;
-            width: 600px;
-            margin: 23px auto;
-            line-height: 36px;
+            margin: 20px 0px;
+            p {
+                display: inline-block;
+                font-size: 15px;
+            }
             .title {
-                display: inline-block;
-                width: 100px;
-                font-size: 16px;
-            }
-            .tip {
-                display: inline-block;
-                background-color: $standard-orange;
-                font-size: 10px;
-                vertical-align: top;
-                width: 220px;
-                border: 1px solid $standard-deep-orange;
-                padding: 0px 5px;
-            }
-            input[type=text] {
-                width: 200px;
-                margin-right: 20px;
-            }
-            select {
-                width: 222px;
-                margin-right: 20px;
-            }
-            .address-radio {
-                margin-right: 5px;
-                &.second {
-                    margin-left: 30px;
-                }
+                width: 150px;
             }
         }
-        .tips {
-            margin-left: 106px;
-            margin-top: 5px;
-            p, a {
-                font-size: 12px;
+        .auth-code-btn {
+            padding: 5px 8px;
+            width: 75px;
+        }
+        .form-item-tips {
+            display: inline-block;
+            padding: 2px 10px;
+            margin-left: 15px;
+            height: 24px;
+            line-height: 24px;
+            vertical-align: top;
+            p {
+                font-size: 13px;
             }
+        }
+    }
+    .register-btn {
+        margin-top: 20px;
+        margin-left: 155px;
+    }
+    .ask {
+        margin-left: 155px;
+        margin-top: 5px;
+        p {
+            display: inline-block;
+        }
+    }
+    .success {
+        padding-top: 60px;
+        text-align: center;
+        .title {
+            margin-bottom: 18px;
+            font-size: 20px;
         }
     }
 }
