--- a/app/styles/common/_base.scss
+++ b/app/styles/common/_base.scss
@@ -1,17 +1,19 @@
 /* 基础色 */
-$standard-black: #000000;
-$standard-light-black: #393B3F;
+$standard-deep-black: #000000;
+$standard-black: #282828;
+$standard-light-black: #313131;
 $standard-white: #ffffff;
 $standard-blue: #0A5ECC;
-$standard-light-blue: #E0F7FF;
+$standard-light-blue: #0086FF;
 $standard-deep-blue: #1C5095;
 $standard-orange: #FE7325;
 $standard-gray: #ebebeb;
 $standard-deep-gray: #aaa;
 $standard-red: #ed7161;
+$standard-light-red: #FDE3E3;
 $standard-deep-orange: #faaf46;
 $standard-blue-green: #74aac5;
-$standard-green: #22c064;
+$standard-green: #31A501;
 
 $page-width: 80%;
 $min-page-width: 960px; 
@@ -43,9 +45,11 @@ a {
     color: $standard-blue;
     cursor: pointer;
     &:hover {
+        color: $standard-light-blue;
         text-decoration: underline;
     }
     &.btn:hover {
+        color: $standard-white;
         text-decoration: none;
     }
 }
@@ -56,7 +60,7 @@ p {
 
 input[type=text], input[type=password] {
     display: inline-block;
-    padding: 8px 10px;
+    padding: 5px 5px;
     border: 1px solid $standard-deep-gray;
     font-size: 15px;
     color: $standard-black;
@@ -77,7 +81,6 @@ input[type=file].error {
 
 input[type=radio], input[type=checkbox] {
     cursor: pointer;
-    vertical-align: text-top;
 }
 
 ul {
@@ -115,9 +118,24 @@ select {
 .error {
     color: $standard-red;
 }
-
+.form-item-tips {
+    font-size: 13px;
+    color: $standard-black;
+    border: #9BD4F4 1px solid;
+    background-color: #E3F5FD;
+    p {
+        font-size: 13px;
+    }
+    &.error {
+        color: $standard-red;
+        border: 1px solid $standard-red;
+        background-color: $standard-light-red;
+    }
+}
 .hide {
     @include opacity(0);
-    height: 0px;
-    margin: 0px;
+    height: 0px!important;
+    margin: 0px!important;
+    padding: 0px!important;
+    overflow: hidden!important;
 }
