--- a/app/styles/common/_header.scss
+++ b/app/styles/common/_header.scss
@@ -1,11 +1,10 @@
 .wd-header {
     min-width: $min-page-width;
     margin: 0 auto;
-    width: $page-width;
+    background-color: $standard-black;
     .top-tips {
         height: 36px;
         line-height: 36px;
-        background-color: $standard-gray;
         color: #7D8185;
         a {
             color: #7D8185;     
@@ -13,20 +12,24 @@
         a, span {
             margin: 5px;
         }
-        padding: 0px 35px;
+        padding: 2px 35px 0px 35px;
         .left {
             float: left;
         }
         .right {
             float: right;
             .open-btn {
-                margin: 0px;
-                background-color: $standard-orange;
+                color: $standard-white;
+                margin: 3px 0px 0px 0px;
+                padding: 4px 14px;
+                background-color: $standard-green;
+                border-radius: 2px;
             }
         }
     }
     .body {
-        padding: 10px 35px;
+        padding: 20px 35px;
+        background-color: $standard-black;
         .logo {
             @include wd-image('logo.png');
         }
@@ -35,14 +38,18 @@
         height: 40px;
         line-height: 40px;
         padding: 0px 35px;
-        background-color: $standard-blue;
+        background-color: $standard-light-black;
         .btn {
             width: 78px;
             height: 24px;
             line-height: 24px;
             font-size: 18px;
+            background-color: $standard-light-black;
             &:hover {
                 background-color: $standard-deep-blue;
+            }
+            &.active {
+                background-color: $standard-blue;
             }
         }
         .left {
