--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,12 @@
 @import "common/header";
 @import "common/footer";
 @import "../base/webuploader-0.1.5/webuploader";
+@import "common/body";
+@import "common/wrapper";
 
-/* account */
-@import "account/index";
+/* others */
+@import "index/index";
+@import "index/download";
+@import "account/register";
+@import "account/login";
+@import "account/open";
