--- a/app/views/account/open.html
+++ b/app/views/account/open.html
@@ -6,10 +6,10 @@
         </div>
         <div class="nav-body">
             <div class="item">
-                <p>填写表格</p>
+                <a ng-click="step = 1;">填写表格</a>
             </div>
             <div class="item">
-                <p>风险披露</p>
+                <a ng-click="step = 2;">风险评估</a>
             </div>
             <div class="item">
                 <p>完成见证</p>
@@ -22,52 +22,32 @@
             </div>
         </div>
     </div>
-    <div class="body">
+    <div class="body" ng-class="{hide: step !== 1}">
         <p class="h2-title">填写开户表格</p>
         <div class="fill-form">
+            <p class="form-title">交易范围</p>
+            <div class="item">
+                <p class="item-title">品种</p>
+                <input type="checkbox" name="b">证券
+                <input type="checkbox" name="b">期货       
+            </div>
             <p class="form-title">基本资料</p>
             <div class="item">
                 <p class="item-title">中文名</p>
                 <input type="text">
-            </div>
-            <div class="item">
-                <p class="item-title">中文名拼音</p>
-                <input type="text">
-            </div>
-            <div class="item">
-                <p class="item-title">国籍</p>
-                <select>
-                    <option>中国大陆</option>
-                </select>
+                <p class="error"></p>
             </div>
             <div class="item">
                 <p class="item-title">身份证号码</p>
                 <input type="text">
             </div>
             <div class="item">
-                <p class="item-title">性别</p>
-                <input name="a" type="radio">男
-                <input name="a" type="radio">女
+                <p class="item-title">签发机构</p>
+                <input type="text" wd-placeholder="身份证背面" ng-model="a">
             </div>
             <div class="item">
-                <p class="item-title">出生日期</p>
-                <select>
-                    <option>1988</option>
-                </select>
-                年
-                <select>
-                    <option>08</option>
-                </select>
-                月
-                <select>
-                    <option>16</option>
-                </select>
-                日
-            </div>
-            <div class="item">
-                <p class="item-title">上传身份证</p>
-                <div class="btn" wd-upload-form>选择证件图片</div>
-                <p>请上传身份证正反面拍照或扫描后的图片</p>
+                <p class="item-title">住宅地址</p>
+                <input type="text" wd-placeholder="请填写身份证上地址" ng-model="a">
             </div>
             <p class="form-title">联系方式</p>
             <div class="item">
@@ -86,27 +66,40 @@
             <div class="item">
                 <p class="item-title">类别</p>
                 <input type="radio" name="b">受雇
-                <input type="radio" name="b">自雇
+                <input type="radio" name="b">自营
                 <input type="radio" name="b">退休
-                <!-- <input type="radio" name="b">其他 -->
+                <input type="radio" name="b">待业
+                <input type="radio" name="b">其他
             </div>
             <div class="item">
                 <p class="item-title">工作单位</p>
                 <input type="text">
-            </div>
+            </div>            
             <div class="item">
-                <p class="item-title">职业/职位</p>
+                <p class="item-title">所属行业</p>
                 <input type="text">
             </div>
             <div class="item">
-                <p class="item-title">业务性质</p>
+                <p class="item-title">工作电话</p>
                 <input type="text">
             </div>
             <div class="item">
-                <p class="item-title">工作地点</p>
+                <p class="item-title">工作地址</p>
                 <input type="text">
             </div>
+        </div>
+    </div>
+    <div class="body" ng-class="{hide: step !== 2}">
+        <p class="h2-title">风险评估表</p>
+        <div class="fill-form">
             <p class="form-title">财务及投资状况</p>
+            <div class="item">
+                <p class="item-title">资金来源</p>
+                <input type="radio" name="c">薪资
+                <input type="radio" name="c">存款
+                <input type="radio" name="c">遗产/受赠
+                <input type="radio" name="c">投资收益
+            </div>
             <div class="item">
                 <p class="item-title">全年收入</p>
                 <input type="radio" name="c">小于 20 万
@@ -120,6 +113,13 @@
                 <input type="radio" name="d">50-250 万
                 <input type="radio" name="d">250-500 万
                 <input type="radio" name="d">大于 500 万
+            </div>
+            <div class="item">
+                <p class="item-title">预计入金</p>
+                <input type="radio" name="c">小于 20 万
+                <input type="radio" name="c">20-50 万
+                <input type="radio" name="c">50-100 万
+                <input type="radio" name="c">大于 100 万
             </div>
             <div class="item">
                 <p class="item-title">投资知识</p>
@@ -138,12 +138,6 @@
                 <input type="radio" name="f">其他
             </div>
             <div class="item">
-                <p class="item-title">每月交易频率</p>
-                <input type="radio" name="g">0-5 次
-                <input type="radio" name="g">5-20 次
-                <input type="radio" name="g">20 次以上
-            </div>
-            <div class="item">
                 <p class="item-title">风险承受能力</p>
                 <input type="radio" name="h">高
                 <input type="radio" name="h">中
@@ -158,75 +152,76 @@
                 <input type="radio" name="c">3 年以上
             </div>
             <div class="item">
-                <p class="item-title">结构性产品</p>
+                <p class="item-title">固定收益产品</p>
                 <input type="radio" name="c">没有经验
                 <input type="radio" name="c">少于 1 年
                 <input type="radio" name="c">1-2 年
                 <input type="radio" name="c">3 年以上
             </div>
             <div class="item">
-                <p class="item-title">外汇/黄金</p>
+                <p class="item-title">债券</p>
                 <input type="radio" name="c">没有经验
                 <input type="radio" name="c">少于 1 年
                 <input type="radio" name="c">1-2 年
                 <input type="radio" name="c">3 年以上
             </div>
             <div class="item">
-                <p class="item-title">认股证/股票期权</p>
+                <p class="item-title">期货/期货期权</p>
                 <input type="radio" name="c">没有经验
                 <input type="radio" name="c">少于 1 年
                 <input type="radio" name="c">1-2 年
                 <input type="radio" name="c">3 年以上
             </div>
             <div class="item">
-                <p class="item-title">期货/期权</p>
+                <p class="item-title">外汇/贵金属</p>
                 <input type="radio" name="c">没有经验
                 <input type="radio" name="c">少于 1 年
                 <input type="radio" name="c">1-2 年
                 <input type="radio" name="c">3 年以上
             </div>
             <p class="form-title">衍生投资品（例如涡轮、牛熊证、ETF 等）的认知评估</p>
-            <div class="item">
-                <input type="checkbox">
-                <p>曾受过有关衍生品的培训和课程</p>
-            </div>
-            <div class="item">
-                <input type="checkbox">
-                <p>具有与衍生产品相关的工作经验</p>
-            </div>
-            <div class="item">
-                <input type="checkbox">
-                <p>在过去3年，产生过至少5次有关衍生产品的交易</p>
-            </div>
             <p class="form-title">其他资料披露</p>
             <div class="item">
                 <input type="checkbox">
-                <p>本人是该证券账户的最终且唯一的受益拥有人</p>
+                <p>本人是否本账户的最终及唯一受益拥有人？</p>
             </div>
             <div class="item">
                 <input type="checkbox">
-                <p>本人和老虎证券国际(香港)有限公司或其联营公司的董事或雇员没有任何关系</p>
+                <p>本人是否与国京(香港)证券与期货有限公司或其子公司及关联公司的董事或雇员有任何关系？</p>
             </div>
             <div class="item">
                 <input type="checkbox">
-                <p>本人不是联合交易所之交易所参与者或证监会的持牌人或注册人的董事、雇员或认可人士</p>
+                <p>本人是否为香港证券及期货事务监察委员会注册持牌人 (或注册人)、任何持牌法团 (或注册机构) 的董事、雇员或认可人士？</p>
             </div>
             <div class="item">
                 <input type="checkbox">
-                <p>本人没有在老虎证券国际(香港)有限公司开设，由本人或本人代表他人、团体或公司实益持有、拥有或运作、或本人拥有直接或间接利益的帐户（无论个人、联名、公司、托管）</p>
+                <p>您是否在国京(香港)证券与期货有限公司已开设由您或您代表他人、团体或公司实益持有、拥有或运作、或您拥有直接或间接利益的账户？</p>
             </div>
             <p class="form-title">请确认已阅读并同意以下条款细则</p>
             <div class="item">
                 <input type="checkbox">
-                <p>我已阅读并同意客户协议书</p>
-                <a href="">点击查看客户协议书</a>
+                <p>我已阅读并同意
+                    <a href="http://register.guoking.com.hk:8080/WebBusiness/gk_open/pdf/secret.pdf">隐私政策</a>
+                </p>
+            </div>
+            <div class="item">
+                <input type="checkbox">
+                <p>我已阅读并知悉
+                    <a href="http://register.guoking.com.hk:8080/WebBusiness/gk_open/pdf/futures_risk.pdf">风险披露声明</a>、
+                    <a href="http://register.guoking.com.hk:8080/WebBusiness/gk_open/pdf/stock_agrement.pdf">证券客户协议书</a>、
+                    <a href="http://register.guoking.com.hk:8080/WebBusiness/gk_open/pdf/futures_agrement.pdf">期货客户协议书</a>
+                </p>
+            </div>
+            <div class="item">
+                <input type="checkbox">
+                <p>我已确认上述信息真实有效</p>
             </div>
         </div>
-        <div class="toolbar">
-            <div class="btns">
-                <a href="">保存草稿</a>
-                <div class="btn submit-btn">提交</div>
-            </div>
+    </div>
+    <div class="toolbar">
+        <div class="btns">
+            <a href="">保存草稿</a>
+            <div class="btn submit-btn" ng-click="nextStep();">提交</div>
         </div>
     </div>
 </div>
