--- a/app/views/common/header.html
+++ b/app/views/common/header.html
@@ -2,14 +2,13 @@
     <div class="wd-wrapper">
         <div class="top-tips">
             <p class="left">
-                <span>客服热线：400-123-1234</span>
-                <a>关注微信</a>
-                <a>帮助中心</a>
+                <span>客服热线：400-150-0852</span>
             </p>
             <p class="right">
                 <a href="#/account-login" class="login-btn">用户登陆</a>
                 <a href="#/account-register">注册</a>
-                <a>在线咨询</a>
+                <a target="_blank" 
+                href="http://chat16.live800.com/live800/chatClient/chatbox.jsp?companyID=290078&configID=51144&jid=9063898172&enterurl=%E5%9B%BD%E4%BA%AC%E8%AF%81%E5%88%B8%E4%B8%8E%E6%9C%9F%E8%B4%A7">在线咨询</a>
                 <a href="#/account-login" class="btn open-btn">免费开户&nbsp;&gt;</a>
             </p>
         </div>
@@ -22,7 +21,7 @@
             <div class="left nav-btns">
                 <a href="#/index" class="btn">首页</a>
                 <a href="#/download" class="btn">下载</a>
-                <div class="btn">关于</div>
+                <a href="#/about-company" class="btn">关于</a>
             </div>
             <div class="right">
                 <!-- <div class="btn buy-btn">买卖股票</div> -->
