--- a/app/views/index/index.html
+++ b/app/views/index/index.html
@@ -12,6 +12,7 @@
                 <div class="icon icon-quality"></div>
                 <p class="title">软件优质</p>
                 <p>覆盖各大平台，随时随地交易</p>
+                <a class="link" href="#/download"></a>
             </div>
             <div class="block">
                 <div class="icon icon-cheap"></div>
