--- a/app/styles/account/_login.scss
+++ b/app/styles/account/_login.scss
@@ -1,19 +1,18 @@
 .wd-account-login {
-    width: $page-width;
-    margin: 30px auto;
+    padding: 60px 0px;
     min-width: $min-page-width;
-    height: 520px;
     position: relative;
     .left {
-        background-color: $standard-gray;
-        width: 100%;
-        height: 500px;
+        .banner {
+            @include wd-image('login.jpg');
+            margin-left: 5%;
+        }
     }
     .login-form {
         background-color: $standard-white;
         position: absolute;
-        top: 60px;
-        right: 100px;
+        top: 30px;
+        right: 5%;
         width: 244px;
         border: 1px solid $standard-deep-gray;
         padding: 25px 30px;
