--- a/app/styles/common/_body.scss
+++ b/app/styles/common/_body.scss
@@ -5,6 +5,7 @@
     border: 1px solid $standard-deep-gray;
     margin: 20px auto 40px auto;
     padding: 30px 0px 50px 0px;
+    position: relative;
     .h2-title {
         p {
             font-size: 23px;
