--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -19,3 +19,6 @@
 @import "account/register";
 @import "account/login";
 @import "account/open";
+@import "about/nav";
+@import "about/body";
+@import "about/license";
