--- a/app/views/index/download.html
+++ b/app/views/index/download.html
@@ -47,7 +47,7 @@
                     <p class="title">SP 软件使用手册</p>
                     <p>更新日期：2014-03-31</p>
                     <div class="btn">下载</div>
-                    <a class="link" target="_blank" href="http://www.guoking.com.hk/n/qhrj/sptrader_guoking_setup_r8483.exe"></a>
+                    <a class="link" target="_blank" href="http://www.guoking.com.hk/n/qhrj/nps269D.pdf"></a>
                 </div>
             </div>
         </div>
