--- a/app/views/account/register.html
+++ b/app/views/account/register.html
@@ -65,7 +65,10 @@
         <div class="btn register-btn" ng-click="registerAccount();">立即注册</div>
         <div class="ask">
             <input type="checkbox" checked="checked">
-            <p>同意并遵守<a href="">隐私声明</a>和<a href="">服务条款</a></p>
+            <p>同意并遵守
+                <a href="http://register.guoking.com.hk:8080/WebBusiness/gk_open/pdf/secret.pdf">隐私声明</a>
+                和
+                <a href="">服务条款</a></p>
         </div>
     </div>
     <div ng-if="register.uiSuccess" class="success">
