--- a/app/views/common/footer.html
+++ b/app/views/common/footer.html
@@ -29,8 +29,9 @@
             </div>
         </div>
         <div class="right">
-            <p class="title">400-150-0852</p>
-            <p>24 小时客服</p>
+            <p class="title"><i class="icon-phone"></i>400-150-0852</p>
+            <p>客服时间：9:00 - 17:30（北京时间）</p>
+            <a target="_blank" herf="http://chat16.live800.com/live800/chatClient/chatbox.jsp?companyID=290078&configID=51144&jid=9063898172&enterurl=%E5%9B%BD%E4%BA%AC%E8%AF%81%E5%88%B8%E4%B8%8E%E6%9C%9F%E8%B4%A7" class="btn online-btn"><i class="icon-sms"></i>在线咨询</a>
         </div>
         <div class="bottom-tips">
             <p>
