[feature] 继续增加关于页面

--- a/app/views/common/footer.html
+++ b/app/views/common/footer.html
@@ -2,7 +2,7 @@
     <div class="wd-wrapper">
         <div class="left">
             <div class="block">
-                <p class="title">老虎证券</p>
+                <p class="title">国京证券</p>
                 <a>服务与收费</a>
                 <a>交易工具</a>
                 <a>联系我们</a>
@@ -35,7 +35,7 @@
         </div>
         <div class="bottom-tips">
             <p>
-                <span>老虎证券为香港证监会认可的持牌法团（<a href="">中央编号：AZT137</a>），提供证券交易服务并受其监管。</span>
+                <span>国京证券为香港证监会认可的持牌法团（<a href="">中央编号：AZT137</a>），提供证券交易服务并受其监管。</span>
                 <span>&copy;2014 富途证券国际(香港)有限公司 版权所有. <a href="">粤ICP备08108712号-2</a></span>
             </p>
         </div>
