--- a/app/views/common/header.html
+++ b/app/views/common/header.html
@@ -25,7 +25,7 @@
             </div>
             <div class="right">
                 <!-- <div class="btn buy-btn">买卖股票</div> -->
-                <div class="btn my-btn">我的账户</div>
+                <a href="#/my-index" class="btn my-btn">我的账户</a>
             </div>
         </div>
     </div>
