--- a/app/views/about/nav.html
+++ b/app/views/about/nav.html
@@ -3,5 +3,6 @@
     <div class="item">
         <a href="#/about-company">公司简介</a>
         <a href="#/about-license">专业资质</a>
+        <a href="#/about-contact">联系我们</a>
     </div>
 </div>
